<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.example</groupId>
  <artifactId>CoherenceToRedisTranslator</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
  </properties>

  <dependencies>
    <!-- Remove old JUnit 3.8.1 -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.10.2</version>
      <scope>test</scope>
    </dependency>

    <!-- Testcontainers with JUnit 5 -->
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>testcontainers</artifactId>
      <version>1.19.7</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>1.19.7</version>
      <scope>test</scope>
    </dependency>

    <!-- Coherence 3.7.1 -->
    <dependency>
      <groupId>com.oracle.coherence</groupId>
      <artifactId>coherence</artifactId>
      <version>3.7.1</version>
    </dependency>

    <!-- Lettuce Core -->
    <dependency>
      <groupId>io.lettuce</groupId>
      <artifactId>lettuce-core</artifactId>
      <version>6.3.2.RELEASE</version>
    </dependency>
    <dependency>
      <groupId>com.redis</groupId>
      <artifactId>lettucemod</artifactId>
      <version>4.3.0</version>
      <scope>test</scope>
    </dependency>

    <!-- JSQLParser -->
    <dependency>
      <groupId>com.github.jsqlparser</groupId>
      <artifactId>jsqlparser</artifactId>
      <version>4.6</version>
    </dependency>
  </dependencies>

  <repositories>
    <repository>
      <id>datanucleus</id>
      <name>DataNucleus Maven2 Repository</name>
      <url>https://www.datanucleus.org/downloads/maven2/</url>
    </repository>
  </repositories>
</project>
